Base:screen recorder [1/2]
Removed power menu for now

Thanks to @alviteri for porting this feature

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -34,4 +34,7 @@
 
   <!-- Expanding volume panel -->
   <java-symbol type="drawable" name="expander_open_mtrl_alpha" />
+
+  <!-- Screenrecorder -->
+  <java-symbol type="bool" name="config_enableScreenrecordChord" />
 </resources>
