--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -83,4 +83,5 @@
     <string name="quick_settings_screenshot">Screenshot</string>
     <string name="quick_settings_usb_tether_label">USB tethering</string>
     <string name="quick_settings_ambient_display_label">Ambient Display</string>
+    <string name="quick_settings_nfc_label">NFC</string>
 </resources>
