Increase brightness faster if ambient light is brightening quickly.
The point of doing this is when going from indoors to bright sunlight,
the brightness adjustment currently leaves one with looking at an
unreadable display for a couple of seconds. Increase responsiveness in
that scenario to ramp up brightness faster.

Change-Id: Idf8ca8ebcdcea06746b0c4f3ab94d2ddddafb32e

Conflicts:
	core/res/res/values/krexus_symbols.xml

Conflicts:
	core/res/res/values/krexus_symbols.xml

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -54,4 +54,7 @@
   <!-- Enable power button on secured lockscreen -->
   <java-symbol type="bool" name="config_powerButtonLockscreenEnabled" />
 
+  <!-- Automatic brightness enhancements -->
+  <java-symbol type="integer" name="config_autoBrightnessBrighteningLightFastDebounce"/>
+
 </resources> 
