--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -119,7 +119,7 @@
 
     <!-- The default tiles to display in QuickSettings -->
     <string name="quick_settings_tiles_default" translatable="false">
-        wifi,bt,inversion,dnd,cell,airplane,rotation,flashlight,location,cast,hotspot,ambient_display,screenshot,timeout,brightness,music,reboot,sound,caffeine,volume_panel
+        wifi,bt,inversion,dnd,cell,airplane,rotation,flashlight,location,cast,hotspot,ambient_display,screenshot,timeout,brightness,music,reboot,sound,caffeine,volume_panel,heads_up
     </string>
 
     <!-- The tiles to display in QuickSettings -->
