SystemUI: QS: Advanced Location Tile (overlay) (Squashed)
A more minimal approach to CM's QS gargantuan customizations. Configured with an overlay. Includes all latest "Location cleanup commits".

Adapted for M by KreAch3R

Original commit: QS: change location sensors mode in quick settings [1/2] by gianmarcorev (committed by zephiK)

SystemUI: clean up Location tile^2 (Squashed)

* Match logic in other list-bearing toggles for consistency

Change-Id: Ibd9913160ec1034085cab4af5d7dccd529946040
Signed-off-by: Roman Birg <roman@cyngn.com>

Conflicts:
	packages/SystemUI/src/com/android/systemui/qs/tiles/LocationTile.java

Conflicts:
	packages/SystemUI/res/layout/location.xml

Cleanup Location Tile

* While I was looking to fix another issue I discovered that the formatting of these location tiles was terrible.  Here we fix some white spaces and coding style to look better.

Change-Id: I268283f4e9a273ed64250a4ec4511b60e0f9ed29
Signed-off-by: Chet Kener <Cl3Kener@gmail.com>

Conflicts:
	packages/SystemUI/res/values/icarus_config.xml
	packages/SystemUI/res/values/icarus_strings.xml
	packages/SystemUI/src/com/android/systemui/qs/tiles/LocationTile.java
	packages/SystemUI/src/com/android/systemui/statusbar/policy/LocationControllerImpl.java

Conflicts:
	packages/SystemUI/res/values/krexus_config.xml

Conflicts:
	packages/SystemUI/res/values/custom_config.xml

--- a/packages/SystemUI/res/values/custom_config.xml
+++ b/packages/SystemUI/res/values/custom_config.xml
@@ -5,4 +5,6 @@
     <bool name="config_keyguardShowVoiceAssistAffordance">true</bool>
     <!-- Double tap anywhere in lockscreen makes the device go to sleep -->
     <bool name="config_doubletap_lockscreen_sleep">true</bool>
+     <!-- Enable the Advanced Location tile in QuickSettings -->
+    <bool name="config_qs_advancedlocation">true</bool>
 </resources>
