--- a/packages/SystemUI/res/values/custom_dimens.xml
+++ b/packages/SystemUI/res/values/custom_dimens.xml
@@ -23,4 +23,13 @@
     <dimen name="floating_action_button_margin_side">18dp</dimen>
     <dimen name="floating_action_button_margin_bottom">64dp</dimen>
 
+    <!-- Side padding for the status bar header -->
+    <dimen name="notification_header_side_padding">@dimen/notification_side_padding</dimen>
+
+    <!-- Elevation for the status bar header -->
+    <dimen name="notification_header_elevation">4dp</dimen>
+
+    <!-- Side padding for the Quick Settings panel -->
+    <dimen name="qs_panel_side_padding">@dimen/notification_side_padding</dimen>
+
 </resources>
