--- a/core/res/res/values/custom_colors.xml
+++ b/core/res/res/values/custom_colors.xml
@@ -43,4 +43,6 @@
 
     <!-- Themes material -->
     <color name="navigation_bar_color">@color/exposed_navigation_bar</color>
+    <color name="color_control_normal_default_material_light">#8a000000</color>
+    <color name="color_control_normal_default_material_dark">#b3ffffff</color>
 </resources> 
