--- a/core/res/res/values/themes_material.xml
+++ b/core/res/res/values/themes_material.xml
@@ -382,7 +382,7 @@ please see themes_device_defaults.xml.
         <item name="colorAccent">@color/accent_material_dark</item>
         <item name="colorEdgeEffect">?attr/colorPrimary</item>
 
-        <item name="colorControlNormal">?attr/textColorSecondary</item>
+        <item name="colorControlNormal">@color/color_control_normal_material_dark</item>
         <item name="colorControlActivated">?attr/colorAccent</item>
 
         <item name="colorControlHighlight">@color/ripple_material_dark</item>
@@ -730,7 +730,7 @@ please see themes_device_defaults.xml.
         <item name="colorPrimary">@color/primary_material_light</item>
         <item name="colorAccent">@color/accent_material_light</item>
 
-        <item name="colorControlNormal">?attr/textColorSecondary</item>
+        <item name="colorControlNormal">@color/color_control_normal_material_light</item>
         <item name="colorControlActivated">?attr/colorAccent</item>
 
         <item name="colorControlHighlight">@color/ripple_material_light</item>
