--- a/core/res/res/values/layers_config.xml
+++ b/core/res/res/values/layers_config.xml
@@ -26,4 +26,7 @@
          needs to be set to false, to prevent the doze notifications from being light -->
     <bool name="config_invert_colors_on_doze">true</bool>
 
+    <!-- Whether windows should show wallpapers -->
+    <bool name="config_windowShowWallpaper">false</bool>
+
 </resources>
