Transparent windows for themes
This adds a bool for windowShowWallpaper set it to true for transparent themes
Also gives windowBackground its own color.

Idea given by Allan W
https://plus.google.com/+AllanWPitchedApps/posts/USPwvrS3Fuc

Bool was inspired from commit:
Author: dankoman30
https://github.com/MinimalOS/android_frameworks_base/commit/be63e87b8ac6161b0d13589cb259c61ad236b0f0

--- a/core/res/res/values/custom_colors.xml
+++ b/core/res/res/values/custom_colors.xml
@@ -4,4 +4,9 @@
     <color name="notification_mtrl_big_picture_bg">#CCEEEEEE</color>
     <color name="resolver_list_bg">@color/white</color>
     <color name="chooser_grid_bg">@color/white</color>
+
+    <!-- Themes material -->
+    <color name="window_background_color_light">@color/background_material_light</color>
+    <color name="window_background_color_dark">@color/background_material_dark</color>
+    <color name="panel_color_background">#000</color>
 </resources>
