--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -35,4 +35,7 @@
    <!-- Doze invert -->
   <java-symbol type="bool" name="config_invert_colors_on_doze" />
 
+  <!-- Whether windows should show wallpapers -->
+  <java-symbol type="bool" name="config_windowShowWallpaper" />
+
 </resources> 
