Transparent windows for themes_material
This adds a bool for windowShowWallpaper set it to true for transparent themes
Also gives windowBackground its own color.

Idea given by Allan W
https://plus.google.com/+AllanWPitchedApps/posts/USPwvrS3Fuc

Bool was inspired from commit:
Author: dankoman30
https://github.com/MinimalOS/android_frameworks_base/commit/be63e87b8ac6161b0d13589cb259c61ad236b0f0

--- a/core/res/res/values/custom_colors.xml
+++ b/core/res/res/values/custom_colors.xml
@@ -45,4 +45,6 @@
     <color name="navigation_bar_color">@color/exposed_navigation_bar</color>
     <color name="color_control_normal_default_material_light">@color/secondary_text_default_material_light</color>
     <color name="color_control_normal_default_material_dark">@color/secondary_text_default_material_dark</color>
+    <color name="window_background_color_light">@color/background_material_light</color>
+    <color name="window_background_color_dark">@color/background_material_dark</color>
 </resources> 
