--- a/packages/SystemUI/res/values/custom_config.xml
+++ b/packages/SystemUI/res/values/custom_config.xml
@@ -3,4 +3,6 @@
 <resources>
     <!-- Show voice assist affordance on Keyguard -->
     <bool name="config_keyguardShowVoiceAssistAffordance">true</bool>
+    <!-- Double tap anywhere in lockscreen makes the device go to sleep -->
+    <bool name="config_doubletap_lockscreen_sleep">true</bool>
 </resources>
