--- a/core/res/res/values/layers_colors.xml
+++ b/core/res/res/values/layers_colors.xml
@@ -20,4 +20,7 @@
     <color name="window_background_color_light">@color/background_material_light</color>
     <color name="window_background_color_dark">@color/background_material_dark</color>
     <color name="panel_color_background">#000</color>
+
+    <!-- Layouts -->
+    <color name="app_permission_icon_tint">@android:color/black</color>
 </resources> 
