--- a/core/res/res/values/custom_styles.xml
+++ b/core/res/res/values/custom_styles.xml
@@ -26,4 +26,8 @@
         <item name="windowEnterAnimation">@anim/slide_in_down</item>
         <item name="windowExitAnimation">@anim/slide_out_up</item>
     </style>
+    <style name="PowerMenuRotateAnimation">
+        <item name="windowEnterAnimation">@anim/rotate_in</item>
+        <item name="windowExitAnimation">@anim/rotate_out</item>
+    </style>
 </resources>
