--- a/packages/SystemUI/res/values/custom_attrs.xml
+++ b/packages/SystemUI/res/values/custom_attrs.xml
@@ -21,4 +21,8 @@
         <attr name="viewLocation" format="integer" />
     </declare-styleable>
 
+    <declare-styleable name="BatteryMeterViewDrawable">
+        <attr name="android:gravity"/>
+    </declare-styleable>
+
 </resources>
