--- a/packages/SystemUI/res/anim/battery_gauge.xml
+++ b/packages/SystemUI/res/anim/battery_gauge.xml
@@ -14,11 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<animated-vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:drawable="@drawable/ic_battery_circle_fill" >
-
-    <target
-        android:name="needle"
-        android:animation="@anim/battery_gauge" />
-
-</animated-vector>
+<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
+    android:propertyName="rotation"
+    android:valueFrom="-120"
+    android:valueTo="120"/>
